# new_conversation_agent_swetha_v1

./: .gitignore  CHANGELOG.md  Member_VA_SOP_Review_Summary_v1.2.docx  README.md  langgraph.json  main.py  pyproject.toml  tenable.docker-compose.yml
.github/workflows/: ci.yml  conversation-eval-bench.yml  langgraph-latency-bench.yml
docs/: README.md  app_graph.md  conversation_context.md  core_agent.md  core_constants.md  guards.md  latency_workload.md  llm_config.md  llm_extractor.md  llm_redaction.md  llm_response_generator.md  llm_schema.md  logger.md  logging-config.md  main.md  partial_reverification.md  request_detection.md  signals.md  slot_manager.md  slot_ownership.md  state.md  utils.md
scripts/: baseline_dashboard.py
scripts/conversational_workload/: ground_truth_builder.py  intent_classifier.py  judge.py  models.py  report_builder.py  run_eval.py  runner.py  slot_ground_truth.py  transcript_cursor.py  user_simulator.py  utils.py  validate_transcripts.py
scripts/conversational_workload/static_transcripts/: claim_adjustment_guide_only.txt  claim_adjustment_happy_path.txt  claim_adjustment_no_proceed.txt  claim_adjustment_upload_only.txt  pcp_clarification_fax.txt  pcp_clarification_zip.txt  pcp_correction_first_name.txt  pcp_correction_member_id.txt  pcp_happy_path.txt
scripts/latency_workload/: data_loader.py  git_output.py  main.py  metrics.py  reporter.py  runner.py
scripts/latency_workload/scenarios/: claim_adjustment_happy_path.txt  pcp_clarification_fax.txt  pcp_clarification_zip.txt  pcp_correction_first_name.txt  pcp_correction_member_id.txt  pcp_happy_path.txt
src/agent/: app_graph.py  logger.py  logging-config.yaml  sentinels.py  speech.py  state.py  utils.py
src/agent/conversation/: context.py
src/agent/core/: __init__.py  agent.py  constants.py  dialogue_manager.py  flags.py  guards.py  models.py  pending_intents.py  request_detection.py  signal.py  signals.py  slot_manager.py  slot_ownership.py  telemetry.py  triage.py
src/agent/llm/: config.py  extractor.py  redaction.py  response_generator.py  schema.py  snapshot.py  turnplan_decoder.py
src/agent/orchestration/: __init__.py  fast_path.py  invalidation.py  observability.py  orchestration.py  registry.py  resolver.py  rewind.py  safeguards.py  shadow.py  turn_gate.py
src/agent/slots/: models.py  (+5 more)
src/intent/: app_graph.py  state.py
tests/: test_email_readback_spoken.py  test_extraction_phase2.py  test_schema_phase1.py  test_signals_spoken.py  test_wait_phase3.py
tests/golden/: README.md  __init__.py  conftest.py  driver.py  test_claim_flow_guard.py  test_golden_baseline.py  test_phase0_characterization.py  test_phase0_flags.py  test_phase1_stale_delivery.py  test_phase1_unified_voice.py  test_phase1_voice_safety.py  test_phase2_dropped_metric.py  test_phase2_turn_gate.py  test_phase2_turnplan_shadow.py  test_phase3_intent_ownership.py  test_phase3_multi_intent_live.py  test_phase3a_resolver.py  test_phase3a_shadow.py  test_phase3b_live.py  test_phase3c.py  test_phase3d.py  test_phase4_hardening.py  test_phase4_rollout.py  test_residual_risk.py  test_scenarios_s1_s8.py  test_stalling.py
tests/live_e2e/: README.md  __init__.py  conftest.py  harness.py  preflight.py  run_live_tests.py  scenarios.py  test_cannot_provide.py  test_fax_indirect_decline.py  test_followup_rescreen.py  test_intent_change.py  test_live.py  test_multi_intent_scenarios.py
tests/replay/: replay_transcript.py
(+164 files in other folders)
